2004-04-01  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c: Updated to use the new signature APIs.

2004-03-31  Not Zed  <NotZed@Ximian.com>

	* *.[ch]: Fixed missing headers now mail/* doesn't include gtk/*,
	camel/*, and gnome/* for you.

2004-03-29  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (set_editor_text): do not add <br> between text
	and signature

2004-03-22  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (disable_editor): do not set editor
	insensitive, use editable-off command instead

	Fixes #55049

2004-03-22  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-hdrs.c (post_browser_clicked_cb): exclude
	non-viable folder targets for selection, related to #55089.

2004-03-18  Radek Doulik  <rodo@ximian.com>

	* listener.c (impl_event): delete event: if empty paragraph has
	signature == 1 then set it to 0

	Fixes #55735 (be sure to update gtkhtml as well)

2004-03-17  Bill Zhu  <bill.zhu@sun.com>

	* e-msg_composer-attachment-bar.c: If we select multi-attachments, the
	"properities" menu item in popup icon context menu will be disabled.

	Fixes bug #55299
	
2004-03-07  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (do_exit): If the subject is empty, use
	_("Untitled Message") as the subject instead.

2004-03-05  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes bug #55202

	* e-msg-composer.c (add_recipients): No longer takes a decode
	argument (handle_mailto is the only function that calls it, and
	the decode value always has to be TRUE for mailto).
	(handle_mailto): Updated.

2004-02-27  Bruce Tao <bruce.tao@sun.com>

	* e-msg-composer-attachment-bar.c: add a key-press event handler, 
	with which a little modification to Paolo Borelli's patch.
	 <pborelli@katamail.com> When one attachment is deleted, the 
	icon right after the last deleted one will be focused.

2004-02-26  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (set_editor_text): Add a <br> tag between the