@@ -1,6 +1,7 @@
 2004-04-01  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* e-msg-composer.c: Updated to use the new signature APIs.
+	(signature_added): _()ify the "Autogenerated" signature name.
 
 2004-03-31  Not Zed  <NotZed@Ximian.com>
 
